// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display blue message for normal message 1`] = `
.c0 {
  position: fixed;
  right: 0;
  top: 0;
}

.c1 {
  color: white;
  margin: 1em 1em 0;
  font-weight: bold;
  font-size: 16px;
  text-align: center;
  background: #2F80ED;
  box-shadow: 2px 2px 10px rgba(0,0,0,0.25);
  padding: 10px;
  visibility: visible;
  -webkit-animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  -webkit-animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  overflow: hidden;
}

.c1:nth-child(n+2) {
  margin-top: 0em;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Thank you
  </p>
</div>
`;

exports[`should display message 1`] = `
.c0 {
  position: fixed;
  right: 0;
  top: 0;
}

<div
  className="c0"
/>
`;

exports[`should display red message for error message 1`] = `
.c0 {
  position: fixed;
  right: 0;
  top: 0;
}

.c1 {
  color: white;
  margin: 1em 1em 0;
  font-weight: bold;
  font-size: 16px;
  text-align: center;
  background: #EB5757;
  box-shadow: 2px 2px 10px rgba(0,0,0,0.25);
  padding: 10px;
  visibility: visible;
  -webkit-animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  -webkit-animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  overflow: hidden;
}

.c1:nth-child(n+2) {
  margin-top: 0em;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Error
  </p>
</div>
`;
